WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
7075
textarea with align=right should not cause contained text to be right-justified
https://bugs.webkit.org/show_bug.cgi?id=7075
Summary
textarea with align=right should not cause contained text to be right-justified
David Kilzer (:ddkilzer)
Reported
2006-02-04 16:31:29 PST
A <textarea align="right"></textarea> element causes text inside of it to be right-justified. Instead, the contained text should be left-justified, and the align="right" should be ignored. (The align="right" should not render the whole element on the right side of the page, either.) Firefox 1.5.0.1 and MSIE 6 both behave this way, e.g., effectively ignoring this attribute.
Attachments
Test case
(77 bytes, text/html)
2006-02-04 16:34 PST
,
David Kilzer (:ddkilzer)
no flags
Details
Test case v2
(77 bytes, text/html)
2006-02-28 14:42 PST
,
David Kilzer (:ddkilzer)
no flags
Details
patch
(34.50 KB, patch)
2007-01-02 07:30 PST
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2006-02-04 16:34:36 PST
Created
attachment 6254
[details]
Test case Note that this is not a regression as Safari v2.0.3 (417.8) on 10.4.4 behaves the same way.
David Kilzer (:ddkilzer)
Comment 2
2006-02-28 14:42:08 PST
Created
attachment 6781
[details]
Test case v2 This is a better test case. It sets the "cols" parameter large enough so you can tell which way the text was justified (right or left)!
Sam Weinig
Comment 3
2007-01-02 07:30:53 PST
Created
attachment 12161
[details]
patch Patch. Don't map 'align' attribute for textarea elements.
mitz
Comment 4
2007-01-02 09:47:23 PST
Comment on
attachment 12161
[details]
patch r=me
Sam Weinig
Comment 5
2007-01-02 09:58:04 PST
Landed in
r18527
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug