LayoutTests:

Reviewed by Mitz and Anders.

        Testcases for http://bugs.webkit.org/show_bug.cgi?id=7075

        * fast/forms/textarea-align-expected.checksum: Added.
        * fast/forms/textarea-align-expected.png: Added.
        * fast/forms/textarea-align-expected.txt: Added.
        * fast/forms/textarea-align.html: Added.

WebCore:

        Reviewed by Mitz and Anders.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=7075
        textarea with align=right should not cause contained text to 
        be right-justified

        Don't map align for textarea elements.

        Test: fast/forms/textarea-align.html

        * html/HTMLTextAreaElement.cpp:
        (WebCore::HTMLTextAreaElement::parseMappedAttribute):



git-svn-id: svn://svn.chromium.org/blink/trunk@18527 bbb929c8-8fbe-4397-9dbb-9b2b20218538